# sigma-rust

./: Cargo.toml
ergo-hex/: Cargo.toml
ergo-hex/examples/: hex-run.rs  show_tx.rs  store-tx.rs
ergo-hex/src/: lib.rs  main.rs
ergo-hex/src/hex/: errors.rs  matcher.rs  mod.rs  parse.rs  prettyprinter.rs  sql.rs
ergo-lib/: Cargo.toml
ergotree-interpreter/src/: eval.rs  lib.rs
ergotree-interpreter/src/eval/: expr.rs  expr.rs_  slice.rs
ergotree-ir/: Cargo.toml
ergotree-ir/src/: ergo_tree.rs  lib.rs  mir.rs
ergotree-ir/src/mir/: append.rs  constant.rs  expr.rs  func_value.rs  slice.rs  value.rs
ergotree-ir/src/serialization/: expr.rs
ergotree-ir/src/sigma_protocol/: dlog_group.rs
testset/: Cargo.toml
testset/src/: main.rs  prettyprinter.rs
testset/src/testset/: errors.rs  matcher.rs  mod.rs
