[package]
name    = "testset"
version = "0.1.0"
license = "CC0-1.0"
authors = ["Alexey Khudyakov"]
edition = "2018"
description = "Poking into ErgoTree IR"

[dependencies]
ergotree-ir = { version = "^0.13.1", path = "../ergotree-ir" }
sigma-ser = { version = "^0.2.0", path = "../sigma-ser" }
ergo-lib = { version = "^0.13.1", path = "../ergo-lib" }
rusqlite = "0.25.0"
clap = "2.33.3"
pretty = "0.10.0"
base16 = "0.2.1"
thiserror = "^1.0"
